--- a/app/src/main/res/layout/adapter_car.xml
+++ b/app/src/main/res/layout/adapter_car.xml
@@ -28,6 +28,7 @@
             android:id="@+id/adapter_car_txt_desc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:maxLines="2"
             android:textSize="16sp"
             tools:text="Melhor carro" />
 
